src/objects/Demo__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>32</length>
    <type>Text</type>
</CustomField>