src/objects/Demo__mdt/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>32</length>
    <type>Text</type>
</CustomField>