src/objects/Demo__mdt/fields/Success_Chance__c.field-meta.xml
<CustomField>
    <fullName>Success_Chance__c</fullName>
    <label>Success Chance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>